adds link to documentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
 description = "Rust wrapper for libraw"
 homepage = "https://github.com/dcuddeback/libraw-rs"
 repository = "https://github.com/dcuddeback/libraw-rs"
+documentation = "http://dcuddeback.github.io/libraw-rs/libraw/"
 license = "MIT"
 readme = "README.md"
 keywords = ["libraw", "raw", "camera", "image"]
